# routes/api.php
@@ -88,6 +88,7 @@ Route::post("events/{id}",[EventController::class,"update"])->middleware("auth:s
 Route::get("/search-event",[EventController::class,"search"]);
 Route::get("/search-event-price",[EventController::class,"searchPrice"]);
 Route::get("/search-event-text",[EventController::class,"searchText"]);
+Route::get("/finished-events",[EventController::class,"finished"]);
 Route::post("/events/{id}/publish",[EventController::class,"publish"])->middleware(["auth:sanctum"]);    
 Route::get("/events/{id}/tickets",[TicketController::class,"eventTickets"])->middleware(["auth:sanctum"]);
 
