# storage/api-docs/api-docs.json
@@ -1347,6 +1347,33 @@
                 }
             }
         },
+        "/api/finished-events": {
+            "get": {
+                "tags": [
+                    "Events"
+                ],
+                "summary": "Get All Events Finished",
+                "description": "return list of the all event Event finished",
+                "operationId": "545b41298c5fe74580b4308089ef98fe",
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    },
+                    "401": {
+                        "description": "action unauthorized"
+                    },
+                    "403": {
+                        "description": "action forbiden"
+                    },
+                    "404": {
+                        "description": "aucun résultat trouvé"
+                    },
+                    "500": {
+                        "description": "erreur serveur"
+                    }
+                }
+            }
+        },
         "/api/tags": {
             "get": {
                 "tags": [
